--- a/index.html
+++ b/index.html
@@ -1,2 +1,5 @@
-<h1 id="result"></h1>
-<button>Відправити</button>
+<h2 id="result"></h1>
+<button id='old'>Відправити Old version</button>
+
+<h2 id="result-new"></h1>
+<button id='new'>Відправити New version</button>
