--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
-<h2 id="result"></h1>
-<button id='old'>Відправити Old version</button>
+<!DOCTYPE html>
+<html>
+<head></head>
+<body>
 
-<h2 id="result-new"></h1>
-<button id='new'>Відправити New version</button>
+</body>
+</html>
